# toolmonkey

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
agent_runtime/: agent_run.py  llm.py  models.py
agent_runtime/instructions/: debug_agent.txt
examples/custom/agent_runtime/: 01_basic_timeout.py  02_retry_exhaustion.py  03_intermittent_timeout.py  04_progressive_timeout.py  05_basic_rate_limit.py  06_progressive_rate_limit.py  agent_run.py  tool_registry.py  tools.py
examples/custom/agent_runtime/instructions/: spotify_agent.txt
examples/custom/agent_runtime/shared/: agent_runtime.py  models.py  tool_registry.py  tool_schemas.py  tools.py
examples/custom/scenarios/logs/: missing_api_key.txt
examples/langchain_examples/: 01_basic_timeout.ipynb  01_basic_timeout.py  01_single_timeout.ipynb  02_retry_exhaustion.ipynb  03_rate_limits.ipynb  04_auth_failures.ipynb  05_content_moderation.ipynb
examples/langchain_examples/shared/: llm.py  tools.py
scenarios/mock_env_files/: .env.api_key
tests/: test_decorators.py  test_monkey.py  test_observer.py
tool_monkey/: __init__.py  decorators.py  exceptions.py  langchain_helpers.py  models.py  monkey.py  observer.py
tool_monkey/config/: logger.py
tool_monkey/scenarios/: auth_failures.py  content_moderation.py  rate_limits.py  timeouts.py
utils/: logger.py
