[tool.poetry]
name = "tool-monkey"
version = "0.1.0"
description = "Chaos testing toolkit for LLM agents. Inject deterministic failures into tool calls to test error handling and retry logic."
authors = ["Daria darianaumova5@gmail.com"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/daria425/tool-monkey"
repository = "https://github.com/daria425/tool-monkey"
keywords = ["llm", "agents", "chaos", "testing", "langchain"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Testing",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0"
pytest-cov = "^7.0"
python-dotenv = "^1.0"

[tool.poetry.group.examples.dependencies]
langchain = "^1.0"
langchain-core = "^1.0"
langchain-openai = "^1.0"
langgraph = "^1.0"
openai = "^2.0"
structlog = "^25.0"
langgraph-prebuilt = "^1.0.5"
tenacity = "^9.1.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["tool_monkey"]
omit = ["tests/*", "examples/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
]
